# WindowCreator

./: .gitignore  CMakeLists.txt  README.md
include/: Callbacks.h  Colour.h  Defines.h  Window.h  WindowManager.h
include/glad/: glad.h
include/window/: Colour.h  Library.h  RenderManager.h  Renderable.h  Window.h  WindowManager.h
lib/: default.frag  default.vert
src/: Callbacks.cpp  Colour.cpp  Window.cpp  WindowManager.cpp  glad.c  main.cpp
src/window/: Colour.cpp  Library.cpp  RenderManager.cpp  Renderable.cpp  Window.cpp  WindowManager.cpp  glad.c
